added a login button and script

--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -14,9 +14,18 @@
   <body>
       <header>Hey how are you doing!!!!</header>
     <form type ='POST' action='/resources:id/like'>
-        <button>
+        <button class = 'like'>
             <p>Like</p>
         </button>
+    </form>
+    <form type = 'POST' action='/login'>
+      <p>
+        Login:
+        <input name = username>
+        <button class = 'login'>
+          Login
+        </button>
+      </p>
     </form>
   </body>
 </html>
