--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    <script type="text/javacript" src="path/to/jquery.cookie.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
 
