--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
 
   <main class="container">
 
-      <section class="new-tweet">
+      <section class="new-url">
         <h2>Add new resource:</h2>
         <form method="POST" action="/">
           <textarea placeholder="Add URL..." required="required" class="url-area" name="text"></textarea>
