--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-      <header>Hey how are you doing!!!!</header>
+      <header>Hey how are you TESTING! doing!!!!</header>
     <form type ='POST' action='/resources:id/like'>
         <button class = 'like'>
             <p>Like</p>
