--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,7 +1,118 @@
+$navbar-background: #f38181;
+$body-background: #fce38a;
+$border-radius: 10px;
+
 body {
   background-color: #EEE;
+}
 
+#nav-bar {
+  position: fixed;
+  color: #e0f3f5;
+  background-color: #103c42;
+  top: 0;
+  width: 100%;
+  height: 80px;
+  padding-left: 2em;
+  padding-right: 2em;
+  z-index: 100;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
   h1 {
-    color: #244751;
+    color: #dee8eb;
+  }
+  .fav-button {
+    align-items: center;
   }
 }
+
+.new-url {
+  margin-left: 2em;
+  margin-right: 2em;
+  margin-top: 2em;
+  border-style: solid;
+  border-radius: $border-radius;
+  border-color: #c6c6c6;
+  border-width: 1px;
+  position: relative;
+  top: 4em;
+  padding: 10px;
+  background-color: #95e1d3;
+  height: 180px;
+  opacity: 0.7;
+  display:flex;
+
+  input {
+      float:right;
+  }
+}
+
+.existing-resource {
+  margin-top:10em;
+  
+
+  .eachResource {
+    border-style: solid;
+  border-radius: $border-radius;
+  border-color: #c6c6c6;
+  border-width: 1px;
+  align-items: center
+  }
+}
+
+
+.searchbar{
+  margin-bottom: auto;
+  margin-top: 5em;
+  height: 60px;
+  background-color: #353b48;
+  border-radius: 30px;
+  padding: 10px;
+  }
+
+  .search_input{
+  color: white;
+  border: 0;
+  outline: 0;
+  background: none;
+  width: 0;
+  caret-color:transparent;
+  line-height: 40px;
+  transition: width 0.4s linear;
+  }
+
+  .searchbar:hover > .search_input{
+  padding: 0 10px;
+  margin-bottom:20em;
+  width: 450px;
+  caret-color:red;
+  transition: width 0.4s linear;
+  }
+
+  .searchbar:hover > .search_icon{
+  background: white;
+  color: #e74c3c;
+  }
+
+  .search_icon{
+  height: 40px;
+  width: 40px;
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color:white;
+  }
+
+  .grid-item { 
+    width: 200px; 
+    padding: 40px;
+  }
+
+  .grid-item--width2 {
+     width: 400px; 
+  }
+
