adding spacing and padding to tiles

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -60,6 +60,45 @@
         </form>
       </section>
 
+  <%# <form class="new-url">
+    <label>
+      <p class="label-txt">ENTER YOUR URL</p>
+      <input type="text" class="input">
+      <div  class="line-box">
+        <div class="line"></div>
+      </div>
+    </label>
+    <label>
+      <p class="label-txt">ENTER YOUR TITLE</p>
+      <input type="text" class="input">
+      <div class="line-box">
+        <div class="line"></div>
+      </div>
+    </label>
+    <label>
+      <p class="label-txt">ENTER A DESCRIPTION</p>
+      <input type="text" class="input">
+      <div class="line-box">
+        <div class="line"></div>
+      </div>
+    </label>
+    <label>
+      <p class="label-txt">ENTER A CATEGORY</p>
+      <input type="text" class="input">
+      <div class="line-box">
+        <div class="line"></div>
+      </div>
+    </label>
+    <label>
+      <p class="label-txt">ENTER YOUR IMAGE</p>
+      <input type="text" class="input">
+      <div class="line-box">
+        <div class="line"></div>
+      </div>
+    </label>
+    <button type="submit">submit</button>
+  </form> %>
+
       <section class="existing-resource grid">
       <%# <div class=eachResource> %>
         <%# <div class="title"> My Javascript Tips </div>
