--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -37,17 +37,19 @@ body {
   border-color: #c6c6c6;
   border-width: 1px;
   position: relative;
-  top: 4em;
-  padding: 10px;
+  color:#103c42;
+  text-align: center;
+  padding: 20px;
   background-color: #95e1d3;
   height: 180px;
   opacity: 0.7;
   display:flex;
 
   input {
-      float:right;
+      //float:right;
   }
 }
+
 
 .existing-resource {
   margin-top:10em;
@@ -109,10 +111,78 @@ body {
 
   .grid-item { 
     width: 200px; 
-    padding: 40px;
+    padding: 60px;
+    margin-bottom: 15px;
   }
 
   .grid-item--width2 {
      width: 400px; 
   }
 
+  
+  // label {
+  //   display: block;
+  //   position: relative;
+  //   margin: 40px 0px;
+  // }
+  // .label-txt {
+  //   position: absolute;
+  //   top: -1.6em;
+  //   padding: 10px;
+  //   font-family: sans-serif;
+  //   font-size: .8em;
+  //   letter-spacing: 1px;
+  //   color: rgb(120,120,120);
+  //   transition: ease .3s;
+  // }
+  // .input {
+  //   width: 100%;
+  //   padding: 10px;
+  //   background: transparent;
+  //   border: none;
+  //   outline: none;
+  // }
+  
+  // .line-box {
+  //   position: relative;
+  //   width: 100%;
+  //   height: 2px;
+  //   background: #BCBCBC;
+  // }
+  
+  // .line {
+  //   position: absolute;
+  //   width: 0%;
+  //   height: 2px;
+  //   top: 0px;
+  //   left: 50%;
+  //   transform: translateX(-50%);
+  //   background: #8BC34A;
+  //   transition: ease .6s;
+  // }
+  
+  // .input:focus + .line-box .line {
+  //   width: 100%;
+  // }
+  
+  // .label-active {
+  //   top: -3em;
+  // }
+  
+  // button {
+  //   display: inline-block;
+  //   padding: 12px 24px;
+  //   background: rgb(220,220,220);
+  //   font-weight: bold;
+  //   color: rgb(120,120,120);
+  //   border: none;
+  //   outline: none;
+  //   border-radius: 3px;
+  //   cursor: pointer;
+  //   transition: ease .3s;
+  // }
+  
+  // button:hover {
+  //   background: #8BC34A;
+  //   color: #ffffff;
+  // }
