--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -52,11 +52,11 @@ body {
 
 
 .existing-resource {
-  margin-top:10em;
+  margin-top:5em;
+  align-items: center;
   
-
   .eachResource {
-    border-style: solid;
+  border-style: solid;
   border-radius: $border-radius;
   border-color: #c6c6c6;
   border-width: 1px;
@@ -107,6 +107,10 @@ body {
   align-items: center;
   border-radius: 50%;
   color:white;
+  }
+
+  .grid {
+    justify-content: center;
   }
 
   .grid-item { 
