--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -33,7 +33,7 @@
       </div>
       <button type="button" class="btn btn-info add-button">>
         <i class="fas fa-edit"></i>
-        Compose
+        Add new resource!
       </button>
     </nav>
 
@@ -56,7 +56,7 @@
           <textarea placeholder="Description..." required="required" class="descr-area" name="text"></textarea>
           <textarea placeholder="Category..." required="required" class="cat-area" name="text"></textarea>
           <textarea placeholder="Image URL..."></textarea>
-          <input type="submit" value="Add" />
+          <input type="submit" value="Add" class="add-resource"/>
         </form>
       </section>
 
