--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -29,7 +29,7 @@
       <!-- <button type="button" class="btn btn-info fav-button">>
         My favourites!
       </button> -->
-        <h1 class="header tweeter">Welcome to the resource homepage</h1>
+        <h1 class="header resource">Resource Favourites</h1>
       </div>
       <!-- <button type="button" class="btn btn-info add-button">>
         <i class="fas fa-edit"></i>
@@ -73,7 +73,7 @@
     
 
 <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-<script type="text/javascript" src="/scripts/app.js"></script>
+<script type="text/javascript" src="/scripts/favs.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
