--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -14,8 +14,8 @@
 
   <body>
       <header>Hey how are you doing!!!!</header>
-    <form type ='POST' action='/resources:id/like'>
-        <button class = 'like'>
+    <form class='like' type ='POST' action='/resources:id/like'>
+        <button class = 'likeButton'>
             <p>Like</p>
         </button>
     </form>
@@ -31,6 +31,16 @@
     <form class='commentBox'type = 'POST' action='/resources:id/comment'>
       <textarea name="text" placeholder="Leave your thoughts below!!"></textarea>
       <input type="submit" value="Comment">
+    </form>
+    <form class='rankBox' type= 'POST' action='/resources:id/rank'>
+      <select>
+        <option value="one">1</option>
+        <option value="two">2</option>
+        <option value="three">3</option>
+        <option value="four">4</option>
+        <option value="five">5</option>
+      </select>
+      <input type='submit'>
     </form>
     <div class='comments'></div>
   </body>
