connected post request from resource form to database

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -55,7 +55,7 @@
           <textarea placeholder="Title..." required="required" class="title-area" name="text"></textarea>
           <textarea placeholder="Description..." required="required" class="descr-area" name="text"></textarea>
           <textarea placeholder="Category..." required="required" class="cat-area" name="text"></textarea>
-          <textarea placeholder="Image URL..."></textarea>
+          <textarea placeholder="Image URL..." class="img-area"></textarea>
           <input type="submit" value="Add" class="add-resource"/>
         </form>
       </section>
