--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -22,9 +22,14 @@ body {
   
   h1 {
     color: #dee8eb;
+    float: left;
+    margin-left: 40px;
+    
+
   }
   .fav-button {
-    align-items: center;
+    margin-top: 20px;
+    float: left;
   }
 }
 
@@ -49,7 +54,7 @@ body {
 
 
 .existing-resource {
-  margin-top:5em;
+  margin-top:4em;
   align-items: center;
   
   .eachResource {
@@ -64,7 +69,7 @@ body {
 
 .searchbar{
   margin-bottom: auto;
-  margin-top: 5em;
+  margin-top: 5.5em;
   height: 60px;
   background-color: #353b48;
   border-radius: 30px;
