changes made to add access from home page button

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -26,9 +26,11 @@
 
     <nav id="nav-bar">
       <div class="navdiv">
-      <button type="button" class="btn btn-info fav-button">>
+      <!-- <button type="button" class="btn btn-info fav-button">>
         My favourites!
-      </button>
+      </button> -->
+      <a href="/favs"  class="btn btn btn-info">My Favorites</a>
+
         <h1 class="header tweeter">Welcome to the resource homepage</h1>
       </div>
       <button type="button" class="btn btn-info add-button">>
