quick fix to bug to allow for login without duplication in the singleResource page

--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -21,12 +21,14 @@
           Login
         </button>
       </p>
+      <!-- <div id=anchor></div> -->
     <div class = 'properties'></div>
     <form class='like' type ='POST' action='/resources:id/like'>
       <button class = 'likeButton'>
           <p>Like</p>
       </button>
     </form>
+    <div class='totalLike'></div>
     <div class='personalLike'></div>
     <div class='personalRank'></div>
     <div class='comments'></div>
@@ -40,5 +42,6 @@
       </select>
       <input type='submit'>
     </form>
+    <div class='averageRank'></div>
   </body>
 </html>
