login page added, header added instead of navbar to homepage

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -62,7 +62,17 @@ body {
   border-radius: $border-radius;
   border-color: #c6c6c6;
   border-width: 1px;
-  align-items: center
+  align-items: center;
+    
+    .title {
+    margin-bottom:2px;
+    }
+    .description {
+
+    }
+    .category {
+    font:bold;
+    }
   }
 }
 
