--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -18,24 +18,25 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    
-   
+
+
   </head>
 
-  <body> 
+  <body>
+  <% include partials/_header %> 
 
-    <nav id="nav-bar">
+    <%# <nav id="nav-bar">
       <div class="navdiv">
-      <button type="button" class="btn btn-info fav-button">>
-        My favourites!
-      </button>
+        <a href="/favs" class="btn btn-info fav-button">
+          My favourites!
+        </a>
         <h1 class="header tweeter">Welcome to the resource homepage</h1>
       </div>
-      <button type="button" class="btn btn-info add-button">>
+      <button type="button" class="btn btn-info add-button">
         <i class="fas fa-edit"></i>
         Add new resource!
       </button>
-    </nav>
+    </nav> %>
 
   <div class="container h-100">
       <div class="d-flex justify-content-center h-100">
@@ -60,61 +61,22 @@
         </form>
       </section>
 
-  <%# <form class="new-url">
-    <label>
-      <p class="label-txt">ENTER YOUR URL</p>
-      <input type="text" class="input">
-      <div  class="line-box">
-        <div class="line"></div>
-      </div>
-    </label>
-    <label>
-      <p class="label-txt">ENTER YOUR TITLE</p>
-      <input type="text" class="input">
-      <div class="line-box">
-        <div class="line"></div>
-      </div>
-    </label>
-    <label>
-      <p class="label-txt">ENTER A DESCRIPTION</p>
-      <input type="text" class="input">
-      <div class="line-box">
-        <div class="line"></div>
-      </div>
-    </label>
-    <label>
-      <p class="label-txt">ENTER A CATEGORY</p>
-      <input type="text" class="input">
-      <div class="line-box">
-        <div class="line"></div>
-      </div>
-    </label>
-    <label>
-      <p class="label-txt">ENTER YOUR IMAGE</p>
-      <input type="text" class="input">
-      <div class="line-box">
-        <div class="line"></div>
-      </div>
-    </label>
-    <button type="submit">submit</button>
-  </form> %>
+  
 
       <section class="existing-resource grid">
-      <%# <div class=eachResource> %>
-        <%# <div class="title"> My Javascript Tips </div>
-       <div class="description"> desc: top 10 info on javascript shortcuts </div>
-       <div class="category"> back-end </div>
-       <span>likes</span>
-       <span>rating</span> %>
-       <%# </div> %>
+     
       </section>
     </main>
-    
+
 
 <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-<script type="text/javascript" src="/scripts/app.js"></script>
+
+
+
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script type="text/javascript" src="/scripts/app.js"></script>
+
   </body>
 </html>
