--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,36 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>My Resource Wall</title>
 
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
-    <script async type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script async type="text/javascript" src="/scripts/app.js"></script>
-  </head>
-
-  <body>
-<h1>TinyApp</h1>
-
-<% if (locals.user) { %> <!-- getting this from object we created and past in use as KEy -->
-
-  <p> Logged in as: <%=user.email%> </p>
-  <form method="POST" action=<%=`/logout`%>>
-    <button class="btn btn-primary"> logout </button>
-  </form>
-  <br/>
-
-<% } else { %>
-
-  <p>
-    <a href="/login">Login</a>
-    |
-    <a href="/register">Register</a>
-  </p>
-
-
-<% } %>
-</body>
-</html>
+  <nav id="nav-bar">
+    <div class="navdiv">
+      <a href="/favs" class="btn btn-info fav-button">
+        My favourites!
+      </a>
+      <h1 class="header tweeter">Welcome to the resource homepage</h1>
+    </div>
+    <button type="button" class="btn btn-info add-button">
+      <i class="fas fa-edit"></i>
+      Add new resource!
+    </button>
+  </nav>
