changes to add cookie into processing

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -23,13 +23,13 @@
   </head>
 
   <body> 
-
+      <!-- <% include ./partials/_header %> -->
     <nav id="nav-bar">
       <div class="navdiv">
       <!-- <button type="button" class="btn btn-info fav-button">>
         My favourites!
       </button> -->
-      <a href="/favs"  class="btn btn btn-info">My Favorites</a>
+      <a href="/favs"  class="btn btn btn-info fav-button">My Favorites</a>
 
         <h1 class="header tweeter">Welcome to the resource homepage</h1>
       </div>
@@ -37,6 +37,10 @@
         <i class="fas fa-edit"></i>
         Add new resource!
       </button>
+      <button type="button" class="btn btn-info login-button">>
+          <i class="fas fa-sign-in-alt"></i>
+          Login
+        </button>
     </nav>
 
   <div class="container h-100">
