--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -9,7 +9,7 @@
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/specificResource.js"></script>
   </head>
 
   <body>
