--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -46,7 +46,7 @@
         </div>
       </div>
     </div>
-
+ <label class="no-entry">Please enter search item</label>
   <main class="container">
 
       <section class="new-url">
