ranking has been modified to retrieve properly, comments are posted and got properly

--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -36,6 +36,10 @@
     <div class='totalLike'></div>
     <div class='personalLike'></div>
     <div class='personalRank'></div>
+    <form class='commentBox'type = 'POST'>
+      <textarea placeholder='Leave your thoughts below!!'></textarea>
+      <input type='submit' value='Comment'>
+    </form>
     <div class='comments'></div>
     <form class='rankBox' type= 'POST'>
       <select>
