--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -70,6 +70,7 @@
 
 
 <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 
 
 
