added some css, made more excesseble classes

--- a/styles/specificResource.scss
+++ b/styles/specificResource.scss
@@ -2,3 +2,31 @@
     position: relative;
     left: 90%;
 }
+
+.properties {
+
+    .image {
+        position: relative;
+        left: 15vw;
+    }
+
+    .url{
+        position: relative;
+    }
+
+    .createdTime{
+        position: relative;
+    }
+
+    .description{
+        position: relative;
+    }
+
+    .category{
+        position: relative;
+    }
+
+    .title{
+        position: relative;
+    }
+}
