--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -11,7 +11,6 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script type="text/javascript" src="/scripts/specificResource.js"></script>
   </head>
-
   <body>
       <header>Hey how are you doing!!!!</header>
       <p class='userLogin'>
@@ -22,7 +21,8 @@
         </button>
       </p>
       <!-- <div id=anchor></div> -->
-    <div class = 'properties'></div>
+    <div class = 'properties'>
+    </div>
     <form class='like' type ='POST'>
       <button class = 'likeButton'>
           <p>Like</p>
