--- a/styles/specificResource.css
+++ b/styles/specificResource.css
@@ -1,8 +1,11 @@
-
 .comments {
   position: relative;
   left: 90%;
 }
 
+.properties .image {
+  position: relative;
+  left: 15vw;
+}
 
 /*# sourceMappingURL=specificResource.css.map */
