--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
  
-<% if (userID) { %>
+
 
   <nav id="nav-bar">
     <div class="navdiv">
@@ -14,20 +14,20 @@
     </button>
   </nav>
 
- <% } else {  %>
 
- <nav id="nav-bar">
-      <div class="navdiv">
-        <h1 class="header tweeter">Welcome to the resource homepage</h1>
-      </div>
-     <a class="btn btn-info login-button" href="/login">
-         <i class="fa-sign-in-alt"></i>
-         Login
-       </a>
-    </nav> 
+
+<%# //  <nav id="nav-bar">
+//       <div class="navdiv">
+//         <h1 class="header tweeter">Welcome to the resource homepage</h1>
+//       </div>
+//      <a class="btn btn-info login-button" href="/login">
+//          <i class="fa-sign-in-alt"></i>
+//          Login
+//        </a>
+//     </nav> 
 
     
-  </nav>
+//   </nav> %>
 
-<% } %>
+
   
