--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -134,7 +134,20 @@ body {
      width: 400px; 
   }
 
-  
+.login-form {
+  margin-top: 6em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-group{
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: flex-start;
+}
+
   // label {
   //   display: block;
   //   position: relative;
