--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,15 +30,19 @@
   <!-- <h2>Login:</h2> -->
   <br />
   <form method="POST" action=<%=`/login`%>>
-    <div class="form-group">
-      <label for="userID">User ID:</label><br>
-        <input type="text" name="userID" class="userID" placeholder="Enter ID">
-    </div>
-    <div class="form-group">
-      <label for="password">Password:</label><br>
-      <input type="password" name="password" id="password" placeholder="Enter password">
-    </div>
-    <input type="submit" class="btn btn-primary login-button">
+    <div class="login-form">
+      <div class="form-group">
+        <label for="userID">User ID:</label>
+          <input type="text" name="userID" class="userID" placeholder="Enter ID">
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password" placeholder="Enter password">
+      </div>
+      <div class="form-group" >
+         <input type="submit" class="btn btn-primary login-button">
+      </div>
+    </div
   </form>
   <!-- <body>  -->
 
