fixed bugs with like button, total likes, total ranking

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -64,13 +64,14 @@ body {
   border-width: 1px;
   align-items: center;
     
-    .title {
+    .existing-resource:hover .title {
     margin-bottom:2px;
-    }
-    .description {
 
     }
-    .category {
+    .existing-resource:hover .description {
+      color:black;
+    }
+    .existing-resource:hover .category {
     font:bold;
     }
   }
