--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,6 +12,10 @@
       <i class="fas fa-edit"></i>
       Add new resource
     </button>
+     <a class="btn btn-info login-button" href="/login">
+          <i class="fa-sign-in-alt"></i>
+        Login
+       </a>
   </nav>
 
 
