changes to fix cookies being passed to nav bar for determining what buttons to display

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -25,7 +25,7 @@
   <body>
   <% include partials/_header %> 
 
-    <%# <nav id="nav-bar">
+    <!-- <nav id="nav-bar">
       <div class="navdiv">
         <a href="/favs" class="btn btn-info fav-button">
           My favourites!
@@ -36,7 +36,7 @@
         <i class="fas fa-edit"></i>
         Add new resource!
       </button>
-    </nav> %>
+    </nav>  -->
 
   <div class="container h-100">
       <div class="d-flex justify-content-center h-100">
