display changes to details pags

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -66,7 +66,7 @@ body {
     
     .existing-resource:hover .title {
     margin-bottom:2px;
-    font:bold
+    font-weight:800
     }
     .description {
 
