--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -13,45 +13,47 @@
   </head>
   <body>
       
-    <form type = 'POST' action='/login'>
-      <p>
-        Login:
-        <input name = username>
-        <button class = 'login'>
-          Login
-        </button>
-      </p>
-      <!-- <div id=anchor></div> -->
+
     <div class = 'properties'>
     </div>
-    <form class='like' type ='POST'>
-      <button class = 'likeButton'>
-          <p>Like</p>
-      </button>
-    </form>
-    <form class='unlike' type ='POST'>
-      <button class = 'unLikeButton'>
-          <p>Unlike</p>
-      </button>
-    </form>
-    <div class='totalLike'></div>
-    <div class='personalLike'></div>
-    <div class='personalRank'></div>
-    <form class='commentBox'type = 'POST'>
-      <textarea placeholder='Leave your thoughts below!!'></textarea>
-      <input type='submit' value='Comment'>
-    </form>
-    <div class='comments'></div>
-    <form class='rankBox' type= 'POST'>
-      <select>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-      </select>
-      <input class = 'rankButton' type='submit'>
-    </form>
-    <div class='averageRank'></div>
+
+    <div class = "like-box">
+      <form class='like' type ='POST'>
+        <button class = 'likeButton'>
+            <p>Like</p>
+        </button>
+      </form>
+      <form class='unlike' type ='POST'>
+        <button class = 'unLikeButton'>
+            <p>Unlike</p>
+        </button>
+      </form>
+      <span class='totalLike'></span>
+      <span class='personalLike'></span>
+      <span class='personalRank'></span>
+    </div>
+
+    <div class = "comment-box">
+      <form class='commentBox'type = 'POST'>
+        <textarea placeholder='Leave your thoughts below!!'></textarea>
+        <input type='submit' value='Comment'>
+      </form>
+      <span class='comments'></span>
+      <form class='rankBox' type= 'POST'>
+        <select>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+        <input class = 'rankButton' type='submit'>
+      </form>
+      <span class='averageRank'></span>
+    </div>
+
+ </div>
+    
+
   </body>
 </html>
