--- a/views/specificResource.ejs
+++ b/views/specificResource.ejs
@@ -19,18 +19,17 @@
 
     <div class = "like-box">
       <form class='like' type ='POST'>
-        <button class = 'likeButton'>
+        <button type="button" class='likeButton btn btn-info'>
             <p>Like</p>
         </button>
       </form>
       <form class='unlike' type ='POST'>
-        <button class = 'unLikeButton'>
+        <button type="button" class='unLikeButton btn btn-info'>
             <p>Unlike</p>
         </button>
       </form>
       <span class='totalLike'></span>
       <span class='personalLike'></span>
-      <span class='personalRank'></span>
     </div>
 
     <div class = "comment-box">
@@ -49,6 +48,7 @@
         </select>
         <input class = 'rankButton' type='submit'>
       </form>
+      <span class='personalRank'></span>
       <span class='averageRank'></span>
     </div>
 
