fixed date display added font colour etc. to details pg

--- a/styles/specificResource.scss
+++ b/styles/specificResource.scss
@@ -4,6 +4,7 @@ $border-radius: 10px;
 
 body {
     background-color: #EEE;
+    color:#809599;
   }
 
 .comments {
@@ -23,7 +24,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
-    color:#103C42;
+    color:#809599;
 
     .title{
        font-weight: 800;
@@ -32,6 +33,7 @@ body {
 
     .description{
         font-weight: 600;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto Oxygen-Sans", Ubuntu, Cantarell, "“Fira Sans”", "“Droid Sans”", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
     .category {
         font-weight: 600;
@@ -45,8 +47,8 @@ body {
         border-radius: $border-radius;
     }
 
-    .createdTime{
-        // position: relative;
+    .createdTime {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto Oxygen-Sans", Ubuntu, Cantarell, "“Fira Sans”", "“Droid Sans”", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
 
    
@@ -57,6 +59,7 @@ body {
 }
 
 .like-box {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto Oxygen-Sans", Ubuntu, Cantarell, "“Fira Sans”", "“Droid Sans”", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     display:flex;
     flex-direction: row;
     // border-style: solid;
@@ -67,6 +70,7 @@ body {
     width: 80%;
     align-items: center;
     justify-content: space-between;
+    padding: 10px;
 }
 
 .comment-box {
@@ -80,4 +84,7 @@ body {
     width: 80%;
     align-items: center;
     justify-content: space-between;
+    background-color: #809599;
+    padding: 10px;
+    color: #ffffff;
 }
