--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,13 +1,143 @@
-/* sass styles/layout.scss styles/layout.css */
-/* gulp (js automaticly converts all scss into the css files) */
-
-/*# sourceMappingURL=layout.css.map */
-
 body {
   background-color: #EEE;
 }
-body h1 {
-  color: #244751;
+
+#nav-bar {
+  position: fixed;
+  color: #e0f3f5;
+  background-color: #103c42;
+  top: 0;
+  width: 100%;
+  height: 80px;
+  padding-left: 2em;
+  padding-right: 2em;
+  z-index: 100;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#nav-bar h1 {
+  color: #dee8eb;
+  float: left;
+  margin-left: 40px;
+}
+#nav-bar .fav-button {
+  margin-top: 20px;
+  float: left;
 }
 
+.new-url {
+  margin-left: 2em;
+  margin-right: 2em;
+  margin-top: 2em;
+  border-style: solid;
+  border-radius: 10px;
+  border-color: #c6c6c6;
+  border-width: 1px;
+  position: relative;
+  color: #103c42;
+  text-align: center;
+  padding: 20px;
+  background-color: #95e1d3;
+  height: 180px;
+  opacity: 0.7;
+  display: flex;
+}
 
+.existing-resource {
+  margin-top: 4em;
+  align-items: center;
+}
+.existing-resource .eachResource {
+  border-style: solid;
+  border-radius: 10px;
+  border-color: #c6c6c6;
+  border-width: 1px;
+  align-items: center;
+}
+.existing-resource .eachResource .title {
+  margin-bottom: 2px;
+  visibility: hide;
+}
+.existing-resource .eachResource .description {
+  color: black;
+  visibility: hide;
+}
+.existing-resource .eachResource .category {
+  font: bold;
+  visibility: hide;
+}
+
+.existing-resource:hover .eachResource .title {
+  margin-bottom: 2px;
+  visibility: hide;
+}
+
+.existing-resource:hover .eachResource .description {
+  color: black;
+  visibility: hide;
+}
+
+.existing-resource:hover .eachResource .category {
+  font: bold;
+  visibility: hide;
+}
+
+.searchbar {
+  margin-bottom: auto;
+  margin-top: 5.5em;
+  height: 60px;
+  background-color: #353b48;
+  border-radius: 30px;
+  padding: 10px;
+}
+
+.search_input {
+  padding: 0 10px;
+  color: white;
+  border: 0;
+  outline: 0;
+  background: none;
+  width: 450px;
+  margin-bottom: 20em;
+  line-height: 40px;
+  caret-color: red;
+}
+
+.no-entry {
+  color: #d1364d;
+  display: flex;
+  justify-content: center;
+}
+
+.searchbar:hover > .search_icon {
+  background: white;
+  color: #e74c3c;
+}
+
+.search_icon {
+  height: 40px;
+  width: 40px;
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color: white;
+}
+
+.grid {
+  justify-content: center;
+}
+
+.grid-item {
+  width: 200px;
+  padding: 60px;
+  margin-bottom: 15px;
+}
+
+.grid-item--width2 {
+  width: 400px;
+}
+
+/*# sourceMappingURL=layout.css.map */
