--- a/styles/specificResource.scss
+++ b/styles/specificResource.scss
@@ -87,7 +87,9 @@ body {
     background-color: #809599;
     padding: 10px;
     color: #ffffff;
-article.comment {
+}
+    .comment {
+    color:black;
     border: 1px black solid;
     padding-left: 1%;
     padding-right: 1%;
