--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -6,6 +6,11 @@ body {
   background-color: #EEE;
 }
 
+.main-navbar {
+  color: #e0f3f5;
+  background-color: #103c42;  
+}
+
 #nav-bar {
   position: fixed;
   color: #e0f3f5;
@@ -46,7 +51,6 @@ body {
   text-align: center;
   padding: 20px;
   background-color: #95e1d3;
-  height: 180px;
   opacity: 0.7;
   display:flex;
 
