--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,7 +5,7 @@
         My favourites
       </a>  
     </div>
-    <a class="navbar-brand" href="/">Pita!</a>
+    <a class="navbar-brand" href="/"><span>Pin</span>it!</a>
     <div class="text-right">
       <button type="button" class="btn btn-info add-button">
         <i class="fas fa-edit"></i>
