add title to favourites page

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -5,7 +5,9 @@ $border-radius: 10px;
 body {
   background-color: #EEE;
 }
-
+  .resource span {
+    font-style:italic;
+}
 .main-navbar {
   color: #FBEABF;
   background-color: #103c42;  
