--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -29,7 +29,7 @@
       <!-- <button type="button" class="btn btn-info fav-button">>
         My favourites!
       </button> -->
-        <h1 class="header resource">Resource Favourites</h1>
+        <h1 class="header resource">My <span>Pin</span>it! Favourites</h1>
       </div>
       <!-- <button type="button" class="btn btn-info add-button">>
         <i class="fas fa-edit"></i>
