changes for project presentation

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,7 +18,7 @@
   <nav class="main-navbar navbar navbar-dark">
     <div class="text-left">  
     </div>  
-    <a class="navbar-brand" href="/">Pita!</a>
+    <a class="navbar-brand" href="/"><span>Pin</span>it!</a>
     <div class="text-right">
      <a class="btn btn-info login-button" href="/login">
           <i class="fa-sign-in-alt"></i>
